--- a/src/DocumentsService.Api/appsettings.json
+++ b/src/DocumentsService.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ElasticsearchConfiguration": {
+    "ClusterUrl": "http://localhost:9200",
+    "DefaultIndex": "documents"
+  }
 }
